[tool.poetry]
name = "customer-response-app"
version = "0.1.0"
description = "An application that predicts customer response to products purchase after a marketing campaign."
authors = ["Demiga-g <midegageorge2@gmail.com>"]
readme = "README.md"
packages = [
    { include = "util_funcs", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.3"
streamlit = "1.37.0"
scikit-learn = "1.2.2"
pandas = "1.4.2"
numpy = "1.26.4"
xgboost = "2.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80
target-version = ['py310']
skip-string-normalization = true

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-final-newline",
    "missing-module-docstring",
    "missing-class-docstring",
    "invalid-name"
]
